@@ -471,6 +471,10 @@ Build
 C API
 -----
 
+- New public functions Py_IncRef() and Py_DecRef(), exposing the
+  functionality of the Py_XINCREF() and Py_XDECREF macros. Useful for
+  runtime dynamic embedding of Python.
+
 - Added a new macro, PySequence_Fast_ITEMS, which retrieves a fast sequence's
   underlying array of PyObject pointers.  Useful for high speed looping.
 
